<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cliente.EliminarCliente">


    <TextView
        android:id="@+id/txt_cliente_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_no_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_nombre_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nombre_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_ap_pat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_apat_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_ap_mat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_amat_cliente"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/txt_razon_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_razon_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_rfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_rfc_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_tel_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_direc_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_paiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_pais_cliente"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txt_correo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email_cliente" />

    <TextView
        android:id="@+id/txt_estado_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_estado_cliente"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnEliminarCli"
        android:text="@string/btn_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCancelarCli"
        android:text="@string/btn_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>