<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_carrito" />
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_baseline_content_paste_24"
            android:title="@string/menu_pedido" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_baseline_tapas_24"
            android:title="@string/menu_producto" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_categoria" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_baseline_content_paste_24"
            android:title="@string/menu_pedido_control" />
    </group>
</menu>