<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ncarne2"
    tools:context=".ui.productos.DatosProducto">

    <Button
        android:id="@+id/opCategorias"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:layout_marginTop="108dp"
        android:text="@string/btn_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="Nombre:"
        android:textColor="@color/black"
        android:textSize="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNomCategory"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/round_border"
        android:backgroundTint="#EFEDED"
        android:ems="10"
        android:hint="Categoría"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_precioP"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="492dp"
        android:background="@drawable/round_border"
        android:backgroundTint="#EFEDED"
        android:ems="10"
        android:hint="@string/txt_precio_prod"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombreP"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/round_border"
        android:backgroundTint="#EFEDED"
        android:ems="10"
        android:hint="@string/txt_nombre_prod"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:text="Descripción:"
        android:textColor="@color/black"
        android:textSize="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="444dp"
        android:text="Precio:"
        android:textColor="@color/black"
        android:textSize="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_descripcionP"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="380dp"
        android:background="@drawable/round_border"
        android:backgroundTint="#EFEDED"
        android:ems="10"
        android:hint="@string/txt_desc_prod"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_guardar_prod"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="560dp"
        android:backgroundTint="#029E43"
        android:text="@string/btn_guardar_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtElegirCategoria"
        android:textColor="@color/black"
        android:textSize="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>